--- a/aik-app/aik-api/src/main/resources/static/doctorAgreement.html
+++ b/aik-app/aik-api/src/main/resources/static/doctorAgreement.html
@@ -9,7 +9,9 @@
     <p>用户协议</p>
 </div>
 <div>
-    “癌康之家”已经尽量合理的***************************************aaa22aaa111
+    “癌康之家”已经尽量合理的***************************************医生端
+    <br/>
+    待文案下发后再完善内容
 </div>
 </body>
 </html>
